--- a/machine-learning-specialization/supervised-ml-regression-classification/C1_W1_Lab02_Model_Representation_Soln.ipynb
+++ b/machine-learning-specialization/supervised-ml-regression-classification/C1_W1_Lab02_Model_Representation_Soln.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0IiCL1GY2Iow8W9IrhvkA",
+      "authorship_tag": "ABX9TyNrE7UtZ5GF3WQv7RW1VqcK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +29,14 @@
     {
       "cell_type": "code",
       "source": [
-        "!curl -L https://github.com/palarunava/machine-learning-courses/blob/main/machine-learning-specialization/supervised-ml-regression-classification/deeplearning.mplstyle"
+        "!curl -L https://raw.githubusercontent.com/palarunava/machine-learning-courses/refs/heads/main/machine-learning-specialization/supervised-ml-regression-classification/deeplearning.mplstyle"
       ],
       "metadata": {
-        "id": "ZNZV2ixvBxdW",
-        "outputId": "2595d8fa-df65-4b5a-dbf4-72a9fccbfe91",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZNZV2ixvBxdW",
+        "outputId": "2595d8fa-df65-4b5a-dbf4-72a9fccbfe91"
       },
       "execution_count": 9,
       "outputs": [
@@ -1505,11 +1505,11 @@
       "execution_count": 8,
       "metadata": {
         "id": "plJD97Uo8v9Y",
-        "outputId": "8c248ee3-ab5f-4c96-a88d-991587317f3f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "8c248ee3-ab5f-4c96-a88d-991587317f3f"
       },
       "outputs": [
         {
