--- a/machine-learning-specialization/supervised-ml-regression-classification/C1_W1_Lab02_Model_Representation_Soln.ipynb
+++ b/machine-learning-specialization/supervised-ml-regression-classification/C1_W1_Lab02_Model_Representation_Soln.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXcEQ4oNf0vxigsUM2o9if",
+      "authorship_tag": "ABX9TyPA3ZcoAu6dKgO+zP5w7EHq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -131,6 +131,20 @@
     {
       "cell_type": "code",
       "source": [
+        "w = 100\n",
+        "b = 100\n",
+        "print(f\"w: {w}\")\n",
+        "print(f\"b: {b}\")"
+      ],
+      "metadata": {
+        "id": "hLsc7EnHE_o-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def compute_model_output(x, w, b):\n",
         "    \"\"\"\n",
         "    Computes the prediction of a linear model\n",
@@ -191,6 +205,15 @@
       ],
       "metadata": {
         "id": "Un57TpWbEpF8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "tCImmFlbFCds"
       },
       "execution_count": null,
       "outputs": []
