--- a/machine-learning-specialization/supervised-ml-regression-classification/C1_W2_Gradient_Descent.ipynb
+++ b/machine-learning-specialization/supervised-ml-regression-classification/C1_W2_Gradient_Descent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmVSlMBivOpjqMkVA2e+39",
+      "authorship_tag": "ABX9TyODlHT3HtURox+1V6Rruo6i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,51 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "**Get the data**"
+      ],
       "metadata": {
-        "id": "qC_nSzlJ8ZBT"
+        "id": "7HVS67vg9MMe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "qC_nSzlJ8ZBT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3dcbf6ef-e82a-4db3-86dd-5f5d64629afd"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Using Colab cache for faster access to the 'housing-prices-dataset' dataset.\n",
+            "Path to dataset files: /kaggle/input/housing-prices-dataset/.\n"
+          ]
+        }
+      ],
+      "source": [
+        "import kagglehub\n",
+        "\n",
+        "# Download latest version\n",
+        "path = kagglehub.dataset_download(\"yasserh/housing-prices-dataset\", path='.')\n",
+        "\n",
+        "print(\"Path to dataset files:\", path)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nyWfJI-T9b3m"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
