--- a/machine-learning-specialization/supervised-ml-regression-classification/C1_W2_Gradient_Descent.ipynb
+++ b/machine-learning-specialization/supervised-ml-regression-classification/C1_W2_Gradient_Descent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMK9MhAMA0vvYrKoJFI/vZV",
+      "authorship_tag": "ABX9TyNyivfg1vNc1pDftzPGpfo4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,21 +37,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 2,
       "metadata": {
         "id": "qC_nSzlJ8ZBT",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1a311cb4-95b9-4274-b759-945833c97413"
+        "outputId": "0d09e268-5d4c-4158-c35d-68340b791ccc"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Using Colab cache for faster access to the 'housing-prices-dataset' dataset.\n",
-            "Path to dataset files: /kaggle/input/housing-prices-dataset\n"
+            "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.13), please consider upgrading to the latest version (1.0.0).\n",
+            "Downloading from https://www.kaggle.com/api/v1/datasets/download/yasserh/housing-prices-dataset?dataset_version_number=1...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 4.63k/4.63k [00:00<00:00, 5.83MB/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting files...\n",
+            "Path to dataset files: /root/.cache/kagglehub/datasets/yasserh/housing-prices-dataset/versions/1\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
           ]
         }
       ],
@@ -73,7 +95,7 @@
       "metadata": {
         "id": "nyWfJI-T9b3m"
       },
-      "execution_count": 71,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -84,7 +106,7 @@
       "metadata": {
         "id": "OCj8QJ7S_mnm"
       },
-      "execution_count": 34,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -101,7 +123,7 @@
       "metadata": {
         "id": "pPEwJlMu_zAs"
       },
-      "execution_count": 36,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -117,13 +139,13 @@
         "X_train.info()"
       ],
       "metadata": {
-        "id": "tgcNDsOcCzTo",
-        "outputId": "1f8ce845-7e01-492e-d93d-0033ae4dc54a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tgcNDsOcCzTo",
+        "outputId": "f8e3c892-87a0-42d2-aff0-c9992a78b4eb"
       },
-      "execution_count": 60,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,14 +196,14 @@
         "X_norm"
       ],
       "metadata": {
-        "id": "rjf9DAfWGjA8",
-        "outputId": "5642359d-f97a-469f-b133-5a1057148971",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 443
-        }
+        },
+        "id": "rjf9DAfWGjA8",
+        "outputId": "f6db53a0-0af3-475a-d6ef-c61751781792"
       },
-      "execution_count": 70,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -217,7 +239,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b957f87c-283c-42f1-b35b-083431afe881\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-4c383f4f-c08e-4ac9-8ea2-faed8540a7b2\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -423,7 +445,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b957f87c-283c-42f1-b35b-083431afe881')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4c383f4f-c08e-4ac9-8ea2-faed8540a7b2')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -475,12 +497,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b957f87c-283c-42f1-b35b-083431afe881 button.colab-df-convert');\n",
+              "        document.querySelector('#df-4c383f4f-c08e-4ac9-8ea2-faed8540a7b2 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b957f87c-283c-42f1-b35b-083431afe881');\n",
+              "        const element = document.querySelector('#df-4c383f4f-c08e-4ac9-8ea2-faed8540a7b2');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -500,7 +522,7 @@
               "  </div>\n",
               "\n",
               "\n",
-              "  <div id=\"id_3b24d595-48ee-4183-8fee-71b1acd0a975\">\n",
+              "  <div id=\"id_cdfb7167-61a1-4205-b4a5-881d37518dee\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -544,7 +566,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_3b24d595-48ee-4183-8fee-71b1acd0a975 button.colab-df-generate');\n",
+              "        document.querySelector('#id_cdfb7167-61a1-4205-b4a5-881d37518dee button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -565,7 +587,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 70
+          "execution_count": 7
         }
       ]
     },
@@ -578,13 +600,13 @@
         "print(f\"Initial bias: {b_init}\")"
       ],
       "metadata": {
-        "id": "vSNvX6AWGkBF",
-        "outputId": "f51e13c2-9172-4310-b769-371c7977618a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vSNvX6AWGkBF",
+        "outputId": "73c7f795-471d-4cba-a869-20809a14c856"
       },
-      "execution_count": 104,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -609,13 +631,13 @@
         "print(f'dj_db: {dj_db}')"
       ],
       "metadata": {
-        "id": "WQh2TyElYUIj",
-        "outputId": "c5118bcc-c7fc-42b9-eece-4e732b43e2cf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WQh2TyElYUIj",
+        "outputId": "9cc943ed-73e7-4fdf-c271-7327e1dcafb5"
       },
-      "execution_count": 129,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -653,12 +675,142 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "Y_error[56]"
+      ],
       "metadata": {
-        "id": "so8PsyCKzcvu"
+        "id": "PE-K4UlXo3oL",
+        "outputId": "b5f3bf64-5b2c-4c6e-c07c-b807e09f50a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.float64(-7343000.0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(Y_error.shape)\n",
+        "print(X_norm.shape)\n",
+        "dj_dw = Y_error.dot(X_norm)/X_norm.shape[0]\n",
+        "print(dj_dw.shape)\n",
+        "print(dj_dw.to_numpy())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "so8PsyCKzcvu",
+        "outputId": "382f35c8-da8b-427f-cfe7-0ec96e4344a9"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(545,)\n",
+            "(545, 12)\n",
+            "(12,)\n",
+            "[-1000711.12691782  -684247.13747121  -966261.09057547  -785473.19197208\n",
+            "  -554311.7407424   -477052.72642098  -349236.09304122  -173767.70847778\n",
+            "  -845668.72516859  -717665.86968431  -615696.26380535  -568917.28955954]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def compute_gradient(X, y, w, b):\n",
+        "    #print(f'{X}\\n')\n",
+        "    #print(f'{y}\\n')\n",
+        "    #print(f'{w}\\n')\n",
+        "    #print(f'{b}\\n')\n",
+        "    \"\"\"\n",
+        "    Computes the gradient for linear regression\n",
+        "    Args:\n",
+        "      X (ndarray (m,n)): Data, m examples with n features\n",
+        "      y (ndarray (m,)) : target values\n",
+        "      w (ndarray (n,)) : model parameters\n",
+        "      b (scalar)       : model parameter\n",
+        "\n",
+        "    Returns:\n",
+        "      dj_dw (ndarray (n,)): The gradient of the cost w.r.t. the parameters w.\n",
+        "      dj_db (scalar):       The gradient of the cost w.r.t. the parameter b.\n",
+        "    \"\"\"\n",
+        "    m,n = X.shape           #(number of examples, number of features)\n",
+        "    dj_dw = np.zeros((n,))\n",
+        "    #print(f'{dj_dw}\\n')\n",
+        "    dj_db = 0.\n",
+        "\n",
+        "    for i in range(m):\n",
+        "        err = (np.dot(X[i], w) + b) - y[i]\n",
+        "        for j in range(n):\n",
+        "            #print(f'Gradient')\n",
+        "            #print(f'{dj_dw[j]}\\n')\n",
+        "            #print(f'{err}\\n')\n",
+        "            #print(f'{X[i, j]}\\n')\n",
+        "            dj_dw[j] = dj_dw[j] + err * X[i, j]\n",
+        "        dj_db = dj_db + err\n",
+        "    dj_dw = dj_dw / m\n",
+        "    dj_db = dj_db / m\n",
+        "\n",
+        "    return dj_db, dj_dw"
+      ],
+      "metadata": {
+        "id": "wQ334yRCWSse"
+      },
+      "execution_count": 40,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(X_norm.shape)\n",
+        "print(Y_train.shape)\n",
+        "print(w_init.shape)\n",
+        "print(b_init)\n",
+        "dj_db, dj_dw = compute_gradient(X_norm.to_numpy(), Y_train.to_numpy(), w_init, b_init)\n",
+        "print(f'dj_db: {dj_db}')\n",
+        "print(f'dj_dw: {dj_dw}')"
+      ],
+      "metadata": {
+        "id": "TgZ1kPh0bPpM",
+        "outputId": "dd50c2af-ce07-4c06-dccc-7809edd5ee8a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(545, 12)\n",
+            "(545,)\n",
+            "(12,)\n",
+            "0.0\n",
+            "dj_db: -4766729.247706422\n",
+            "dj_dw: [-1000711.12691782  -684247.1374712   -966261.09057547  -785473.19197208\n",
+            "  -554311.7407424   -477052.72642098  -349236.09304122  -173767.70847778\n",
+            "  -845668.72516859  -717665.86968431  -615696.26380535  -568917.28955954]\n"
+          ]
+        }
+      ]
     }
   ]
 }
