--- a/machine-learning-specialization/supervised-ml-regression-classification/C1_W2_Gradient_Descent.ipynb
+++ b/machine-learning-specialization/supervised-ml-regression-classification/C1_W2_Gradient_Descent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/vCfqmTeZl2i70nCtcbAl",
+      "authorship_tag": "ABX9TyOuvxy5NCW5tKttckqkMqRK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1227,7 +1227,8 @@
         "def linear_regression_cost(X, y, w, b):\n",
         "  y_predict = linear_regression_predict(X, w, b)\n",
         "  y_error = y_predict - y\n",
-        "  return (y_error ** 2).sum() / (2*X.shape[0])"
+        "  cost = (y_error ** 2).sum() / (2*X.shape[0])\n",
+        "  return cost, y_error"
       ],
       "metadata": {
         "id": "n9z8WtbuH1FL"
