--- a/machine-learning-specialization/supervised-ml-regression-classification/C1_W2_Gradient_Descent.ipynb
+++ b/machine-learning-specialization/supervised-ml-regression-classification/C1_W2_Gradient_Descent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOuvxy5NCW5tKttckqkMqRK",
+      "authorship_tag": "ABX9TyPIbUMC2b1jpOenPlzZ47u/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -580,8 +580,8 @@
       "cell_type": "code",
       "source": [
         "X_train = data_train.iloc[:, 1:]\n",
-        "Y_train = data_train.iloc[:, 0]\n",
-        "assert X_train.shape[0] == Y_train.shape[0]\n",
+        "y_train = data_train.iloc[:, 0]\n",
+        "assert X_train.shape[0] == y_train.shape[0]\n",
         "print(\"Information about the data:\")\n",
         "print(f\"Number of training samples: {X_train.shape[0]}\")\n",
         "print(f\"Number of features: {X_train.shape[1]}\")\n",
@@ -1044,8 +1044,8 @@
     {
       "cell_type": "code",
       "source": [
-        "Y_norm = (Y_train - Y_train.mean()) / Y_train.std()\n",
-        "Y_norm"
+        "y_norm = (y_train - y_train.mean()) / y_train.std()\n",
+        "y_norm"
       ],
       "metadata": {
         "colab": {
@@ -1239,6 +1239,20 @@
     {
       "cell_type": "code",
       "source": [
+        "def linear_regression_gradients(X, y):\n",
+        "  dj_dw = y.dot(X) / X.shape[0]\n",
+        "  dj_db = np.sum(y) / X.shape[0]\n",
+        "  return dj_db, dj_dw"
+      ],
+      "metadata": {
+        "id": "EuoDelr2VSCd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "w = np.zeros(X_norm.shape[1])\n",
         "b = 0\n",
         "#w = np.random.random(X_norm.shape[1])\n",
@@ -1250,11 +1264,14 @@
         "reg_param = 10\n",
         "\n",
         "for iter in range(iterations):\n",
-        "  Y_predict = X_norm.dot(w) + b\n",
-        "  Y_error = Y_predict - Y_norm\n",
-        "  cost = (Y_error ** 2).sum() / (2*X_norm.shape[0])\n",
-        "  dj_dw = Y_error.dot(X_norm) / X_norm.shape[0]\n",
-        "  dj_db = np.sum(Y_error) / X_norm.shape[0]\n",
+        "  cost, y_error = linear_regression_cost(X_norm, y_norm, w, b)\n",
+        "  #Y_predict = X_norm.dot(w) + b\n",
+        "  #Y_error = Y_predict - y_norm\n",
+        "  #cost = (Y_error ** 2).sum() / (2*X_norm.shape[0])\n",
+        "\n",
+        "  dj_dw, dj_db = linear_regression_gradients(X_norm, y_error)\n",
+        "  #dj_dw = Y_error.dot(X_norm) / X_norm.shape[0]\n",
+        "  #dj_db = np.sum(Y_error) / X_norm.shape[0]\n",
         "  w -= learning_rate * dj_dw\n",
         "  b -= learning_rate * dj_db\n",
         "  if (iter + 1) % 100 == 0:\n",
