--- a/machine-learning-specialization/supervised-ml-regression-classification/C1_W2_Gradient_Descent.ipynb
+++ b/machine-learning-specialization/supervised-ml-regression-classification/C1_W2_Gradient_Descent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMGfoyZqzNav+qPrBBUzyb2",
+      "authorship_tag": "ABX9TyP3Uf3Ph9Aw0kjeqyi2JaGz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -858,7 +858,7 @@
         "#b = np.random.random()\n",
         "print(f\"Initial weights: {w}\")\n",
         "print(f\"Initial bias: {b}\")\n",
-        "iterations = 3000\n",
+        "iterations = 1\n",
         "learning_rate = 0.03\n",
         "reg_param = 10\n",
         "\n",
@@ -876,7 +876,7 @@
         "  #w -= learning_rate * dj_dw\n",
         "  #b -= learning_rate * dj_db\n",
         "\n",
-        "  if (iter + 1) % 100 == 0:\n",
+        "  if (iter + 1) % 1 == 0:\n",
         "    print(f'Interation: {iter + 1} Cost: {cost}')\n",
         "  #print(f'dj_dw: {dj_dw}')\n",
         "  #print(f'dj_db: {dj_db}')\n",
@@ -886,51 +886,33 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 391
         },
         "id": "WQh2TyElYUIj",
-        "outputId": "8fffd8db-26c6-4cb4-e5e3-5bd7e05c1a2e"
+        "outputId": "d29d65a6-8f4d-4223-c6cb-9e18f3338e1d"
       },
-      "execution_count": 26,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Initial weights: [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            "Initial bias: 0\n",
-            "Interation: 100 Cost: 0.49877450980392196\n",
-            "Interation: 200 Cost: 0.49877450980392196\n",
-            "Interation: 300 Cost: 0.49877450980392196\n",
-            "Interation: 400 Cost: 0.49877450980392196\n",
-            "Interation: 500 Cost: 0.49877450980392196\n",
-            "Interation: 600 Cost: 0.49877450980392196\n",
-            "Interation: 700 Cost: 0.49877450980392196\n",
-            "Interation: 800 Cost: 0.49877450980392196\n",
-            "Interation: 900 Cost: 0.49877450980392196\n",
-            "Interation: 1000 Cost: 0.49877450980392196\n",
-            "Interation: 1100 Cost: 0.49877450980392196\n",
-            "Interation: 1200 Cost: 0.49877450980392196\n",
-            "Interation: 1300 Cost: 0.49877450980392196\n",
-            "Interation: 1400 Cost: 0.49877450980392196\n",
-            "Interation: 1500 Cost: 0.49877450980392196\n",
-            "Interation: 1600 Cost: 0.49877450980392196\n",
-            "Interation: 1700 Cost: 0.49877450980392196\n",
-            "Interation: 1800 Cost: 0.49877450980392196\n",
-            "Interation: 1900 Cost: 0.49877450980392196\n",
-            "Interation: 2000 Cost: 0.49877450980392196\n",
-            "Interation: 2100 Cost: 0.49877450980392196\n",
-            "Interation: 2200 Cost: 0.49877450980392196\n",
-            "Interation: 2300 Cost: 0.49877450980392196\n",
-            "Interation: 2400 Cost: 0.49877450980392196\n",
-            "Interation: 2500 Cost: 0.49877450980392196\n",
-            "Interation: 2600 Cost: 0.49877450980392196\n",
-            "Interation: 2700 Cost: 0.49877450980392196\n",
-            "Interation: 2800 Cost: 0.49877450980392196\n",
-            "Interation: 2900 Cost: 0.49877450980392196\n",
-            "Interation: 3000 Cost: 0.49877450980392196\n",
-            "w: [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            "b: 0\n"
+            "Initial bias: 0\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "matrices are not aligned",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-595264613.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m   \u001b[0;31m#cost = (Y_error ** 2).sum() / (2*X_norm.shape[0])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m   \u001b[0mdj_dw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdj_db\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlinear_regression_gradients\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_norm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_error\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m   \u001b[0;31m#dj_dw = Y_error.dot(X_norm) / X_norm.shape[0]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m   \u001b[0;31m#dj_db = np.sum(Y_error) / X_norm.shape[0]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-990887476.py\u001b[0m in \u001b[0;36mlinear_regression_gradients\u001b[0;34m(X, y)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mlinear_regression_gradients\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0mdj_dw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m   \u001b[0mdj_db\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mdj_db\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdj_dw\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/core/series.py\u001b[0m in \u001b[0;36mdot\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m   3221\u001b[0m             \u001b[0mcommon\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3222\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommon\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommon\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3223\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"matrices are not aligned\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3224\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3225\u001b[0m             \u001b[0mleft\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcommon\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: matrices are not aligned"
           ]
         }
       ]
