--- a/machine-learning-specialization/supervised-ml-regression-classification/C1_W2_Gradient_Descent.ipynb
+++ b/machine-learning-specialization/supervised-ml-regression-classification/C1_W2_Gradient_Descent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkDn5+YdZu9QkpZQfi5zue",
+      "authorship_tag": "ABX9TyP7TTHaFHH+8br3QY6PNf3J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,8 @@
         "import kagglehub\n",
         "import pandas as pd\n",
         "import numpy as np\n",
-        "import math"
+        "import math\n",
+        "import matplotlib.pyplot as plt"
       ],
       "metadata": {
         "id": "6KdE6s1HJMvd"
@@ -96,22 +97,13 @@
         "print(f\"Number of training samples: {train_num_samples}\")\n",
         "print(f\"Number of validation samples: {valid_num_samples}\")\n",
         "print(f\"Number of testing samples: {test_num_samples}\")\n",
-        "print(f\"Number of features: {X_train.shape[1]}\")"
+        "print(f\"Number of features: {data_train.shape[1] - 1}\")"
       ],
       "metadata": {
         "id": "VRnA_n-nkF5Z"
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Normalize the data - Z score"
-      ],
-      "metadata": {
-        "id": "JQ_2s0xDPFsi"
-      }
     },
     {
       "cell_type": "code",
@@ -205,7 +197,8 @@
     {
       "cell_type": "code",
       "source": [
-        "def gradient_descent(X, y, iterations = 1000, alpha = 0.1, _lambda = 0):\n",
+        "def gradient_descent(X, y, iterations = 1000, alpha = 0.1, _lambda = 0, step_size = 10, log = True):\n",
+        "  cost_history = []\n",
         "  w, b = init_parameters_with_random_weights(X)\n",
         "  for iter in range(iterations):\n",
         "    # Calculate cost\n",
@@ -217,14 +210,38 @@
         "    # Update weights\n",
         "    w, b = update_weights(w, b, dj_dw, dj_db, alpha = alpha)\n",
         "\n",
-        "    # Plot cost against iterations\n",
-        "    if (iter + 1) % 10 == 0:\n",
-        "      print(f'Interation: {iter + 1} Cost: {cost}')\n",
+        "    # Log cost against iterations\n",
+        "    if(log):\n",
+        "      if (iter + 1) % step_size == 0:\n",
+        "        print(f'Interation: {iter + 1} Cost: {cost}')\n",
         "\n",
-        "  return w, b"
+        "    # Accumulate history\n",
+        "    cost_history.append(cost)\n",
+        "\n",
+        "  return w, b, cost_history"
       ],
       "metadata": {
         "id": "Ev-cgAAkNcKX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def plot_cost_history(cost_history):\n",
+        "  plt.plot(cost_history)\n",
+        "\n",
+        "  # Adding labels and a title\n",
+        "  plt.xlabel(\"Index\")\n",
+        "  plt.ylabel(\"Value\")\n",
+        "  plt.title(\"Plot of Array Values vs. Index\")\n",
+        "\n",
+        "  # Display the plot\n",
+        "  plt.show()"
+      ],
+      "metadata": {
+        "id": "U321N0qYtpIG"
       },
       "execution_count": null,
       "outputs": []
@@ -236,12 +253,31 @@
         "iterations = 5000\n",
         "learning_rate = 0.01\n",
         "regularization_param = 10\n",
-        "w, b = gradient_descent(X_norm, y_norm, iterations = iterations, alpha = learning_rate, _lambda = regularization_param)\n",
+        "\n",
+        "w, b, cost_history = gradient_descent(\n",
+        "    X = X_norm,\n",
+        "    y = y_norm,\n",
+        "    iterations = iterations,\n",
+        "    alpha = learning_rate,\n",
+        "    _lambda = regularization_param,\n",
+        "    step_size = 100,\n",
+        "    log = True\n",
+        ")\n",
         "print(f'Final w: {w.to_numpy()}')\n",
-        "print(f'Final b: {b}')"
+        "print(f'Final b: {b}')\n",
+        "plot_cost_history(cost_history)"
       ],
       "metadata": {
         "id": "OYYAKwNMOb73"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XxLLZOHzeljq"
       },
       "execution_count": null,
       "outputs": []
