--- a/machine-learning-specialization/supervised-ml-regression-classification/C1_W1_Lab03_Cost_function_Soln.ipynb
+++ b/machine-learning-specialization/supervised-ml-regression-classification/C1_W1_Lab03_Cost_function_Soln.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpZStMBXt3twqc+lTSfDeQ",
+      "authorship_tag": "ABX9TyMp98b+dFhBMq4K8bffKXqm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -324,6 +324,7 @@
         "import numpy as np\n",
         "%matplotlib inline\n",
         "import matplotlib.pyplot as plt\n",
+        "import lab_utils_uni\n",
         "from lab_utils_uni import plt_intuition, plt_stationary, plt_update_onclick, soup_bowl\n",
         "plt.style.use('./deeplearning.mplstyle')"
       ]
