--- a/tensorflow-developer-professional-certificate/hello-world.ipynb
+++ b/tensorflow-developer-professional-certificate/hello-world.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmVSlMBivOpjqMkVA2e+39",
+      "authorship_tag": "ABX9TyNQ2P1qxO3NTRIlgHYOHX9Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,75 @@
         "id": "MLibQ86VsRGh"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import tensorflow as tf\n",
+        "import numpy as np"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Declare model inputs and outputs for training\n",
+        "xs = np.array([-1.0,  0.0, 1.0, 2.0, 3.0, 4.0], dtype=float)\n",
+        "ys = np.array([-3.0, -1.0, 1.0, 3.0, 5.0, 7.0], dtype=float)\n",
+        "\n",
+        "# Build a simple Sequential model\n",
+        "model = tf.keras.Sequential([\n",
+        "\n",
+        "    # Define the input shape\n",
+        "    tf.keras.Input(shape=(1,)),\n",
+        "\n",
+        "    # Add a Dense layer\n",
+        "    tf.keras.layers.Dense(units=1)\n",
+        "])\n",
+        "\n",
+        "print(model.weights)\n",
+        "\n",
+        "# Compile the model\n",
+        "model.compile(optimizer='sgd', loss='mean_squared_error')\n",
+        "\n",
+        "# Train the model\n",
+        "model.fit(xs, ys, epochs=500)\n",
+        "\n",
+        "# Make a prediction\n",
+        "print(f\"model predicted: {model.predict(np.array([10.0]), verbose=0).item():.5f}\")"
+      ],
+      "metadata": {
+        "id": "oWiqCWCAxBBb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Reshape the input into a 2D array with dimensions (batch_size, features)\n",
+        "xs = np.array(xs).reshape(-1, 1)\n",
+        "\n",
+        "# Build a simple Sequential model\n",
+        "model = tf.keras.Sequential([\n",
+        "\n",
+        "    # Add a Dense layer\n",
+        "    tf.keras.layers.Dense(units=1)\n",
+        "])\n",
+        "\n",
+        "# No model weights\n",
+        "print(model.weights)\n",
+        "\n",
+        "# Compile the model\n",
+        "model.compile(optimizer='sgd', loss='mean_squared_error')\n",
+        "\n",
+        "# Train the model\n",
+        "model.fit(xs, ys, epochs=500)\n",
+        "\n",
+        "# Make a prediction\n",
+        "print(f\"model predicted: {model.predict(np.array([10.0]), verbose=0).item():.5f}\")"
+      ],
+      "metadata": {
+        "id": "jXWAULdM1Lco"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
