--- a/tensorflow-developer-professional-certificate/fashion-mnist.ipynb
+++ b/tensorflow-developer-professional-certificate/fashion-mnist.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOXNEEJULTbiwa6lXfHTW0X",
+      "authorship_tag": "ABX9TyMOmo7XuI7blLjjCaE4kChk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -453,12 +453,12 @@
         "print(f'\\nThe predicted class is {np.argmax(classifications[index])} and the actual class is {test_labels[index]}')"
       ],
       "metadata": {
-        "id": "wKdcJmt2CwkV",
-        "outputId": "9c398079-e8c9-4a2b-b3c7-37cf4f42826d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 713
-        }
+        },
+        "id": "wKdcJmt2CwkV",
+        "outputId": "9c398079-e8c9-4a2b-b3c7-37cf4f42826d"
       },
       "execution_count": 61,
       "outputs": [
@@ -552,12 +552,12 @@
         "print(f'\\nThe predicted class is {np.argmax(classifications[index])} and the actual class is {test_labels[index]}')"
       ],
       "metadata": {
-        "id": "G01_EFzyDRPi",
-        "outputId": "05456221-270d-4b1c-f52e-7feb9afb728a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 708
-        }
+        },
+        "id": "G01_EFzyDRPi",
+        "outputId": "05456221-270d-4b1c-f52e-7feb9afb728a"
       },
       "execution_count": 67,
       "outputs": [
@@ -615,7 +615,10 @@
       "source": [
         "class myCallback(tf.keras.callbacks.Callback):\n",
         "    def on_epoch_end(self, epoch, logs={}):\n",
-        "        print(f'\\n{logs}')\n",
+        "        # Check the loss\n",
+        "        # if logs['loss'] < 0.4:\n",
+        "\n",
+        "        # Check accuracy\n",
         "        if(logs.get('accuracy') >= 0.6): # Experiment with changing this value\n",
         "            print(\"\\nReached 60% accuracy so cancelling training!\")\n",
         "            self.model.stop_training = True\n",
@@ -659,12 +662,12 @@
         "print(f'\\nThe predicted class is {np.argmax(classifications[index])} and the actual class is {test_labels[index]}')"
       ],
       "metadata": {
-        "id": "cujFtPktGQXa",
-        "outputId": "84b275e7-9bd5-41e8-ac73-d87345c84f85",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 643
-        }
+        },
+        "id": "cujFtPktGQXa",
+        "outputId": "84b275e7-9bd5-41e8-ac73-d87345c84f85"
       },
       "execution_count": 72,
       "outputs": [
